# planner

./: .gitignore  COPYING  README.md  meson.build
data/: meson.build  org.i2002.Planner.appdata.xml.in  org.i2002.Planner.desktop.in  org.i2002.Planner.gschema.xml
po/: POTFILES  meson.build
src/: main.py  meson.build  planner.gresource.xml  planner.in  tasks.py  tasks.ui  timer.py  timer.ui  websocket.py  window.py  window.ui
